--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "",
-  "version": "",
+  "name": "formulated-obo-demo-fn",
+  "version": "1.0.0",
   "scripts": {
     "build": "tsc",
     "build:production": "npm run prestart && npm prune --production",
